fix: add missing presenter
OCD-4264